gl33-master/src/test/deca/context/invalid/other/appelFauxFonction9.deca
// Test de contexte invalide : appel faux de la fonction (int au lieu de boolean)

class MyClass{

    boolean puissance(boolean a){
        return a;
    }
}

{
    MyClass m = new MyClass();
    int x = m.puissance(1);
}
